@@ -37,13 +37,13 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     int bottomTierLevel =
         TieredBlockStoreTestUtils.TIER_LEVEL[TieredBlockStoreTestUtils.TIER_LEVEL.length - 1];
     // capacity increases with index
-    long[] bottomTierDirCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY[bottomTierLevel];
+    long[] bottomTierDirCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY_BYTES[bottomTierLevel];
     long smallestCapacity = bottomTierDirCapacity[0];
     long delta = smallestCapacity / 10;
     int nDir = bottomTierDirCapacity.length;
     // free space of StorageDir increases with Dir index
     for (int i = 0; i < nDir; i ++) {
-      cache(USER_ID, BLOCK_ID + i, bottomTierDirCapacity[i] - i * delta, bottomTierLevel, i);
+      cache(SESSION_ID, BLOCK_ID + i, bottomTierDirCapacity[i] - i * delta, bottomTierLevel, i);
     }
 
     BlockStoreLocation anyDirInBottomTier = BlockStoreLocation.anyDirInTier(bottomTierLevel + 1);
@@ -53,7 +53,7 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     Assert.assertNotNull(plan);
     Assert.assertTrue(plan.toMove().isEmpty());
     Assert.assertEquals(1, plan.toEvict().size());
-    long toEvictBlockId = plan.toEvict().get(0);
+    long toEvictBlockId = plan.toEvict().get(0).getFirst();
     Assert.assertEquals(BLOCK_ID + nDir - 1, toEvictBlockId);
   }
 
@@ -63,12 +63,12 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     // the first tier, leave the second tier empty. Request space from the first tier, blocks should
     // be moved from the first to the second tier without eviction.
     int firstTierLevel = TieredBlockStoreTestUtils.TIER_LEVEL[0];
-    long[] firstTierDirCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY[0];
+    long[] firstTierDirCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY_BYTES[0];
     long smallestCapacity = firstTierDirCapacity[0];
     long delta = smallestCapacity / 10;
     int nDir = firstTierDirCapacity.length;
     for (int i = 0; i < nDir; i ++) {
-      cache(USER_ID, BLOCK_ID + i, firstTierDirCapacity[i] - delta * i, firstTierLevel, i);
+      cache(SESSION_ID, BLOCK_ID + i, firstTierDirCapacity[i] - delta * i, firstTierLevel, i);
     }
     BlockStoreLocation anyDirInFirstTier = BlockStoreLocation.anyDirInTier(firstTierLevel + 1);
     EvictionPlan plan =
@@ -76,7 +76,7 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     Assert.assertTrue(EvictorTestUtils.validCascadingPlan(smallestCapacity, plan, mMetaManager));
     Assert.assertEquals(0, plan.toEvict().size());
     Assert.assertEquals(1, plan.toMove().size());
-    long blockId = plan.toMove().get(0).getFirst();
+    long blockId = plan.toMove().get(0).getBlockId();
     Assert.assertEquals(BLOCK_ID + nDir - 1, blockId);
   }
 
@@ -88,16 +88,16 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     // second tier should be evicted to hold blocks moved from the first tier.
     BlockStoreLocation anyDirInFirstTier =
         BlockStoreLocation.anyDirInTier(TieredBlockStoreTestUtils.TIER_LEVEL[0] + 1);
-    int nDirInFirstTier = TieredBlockStoreTestUtils.TIER_CAPACITY[0].length;
-    int nDirInSecondTier = TieredBlockStoreTestUtils.TIER_CAPACITY[1].length;
-    long smallestCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY[0][0];
+    int nDirInFirstTier = TieredBlockStoreTestUtils.TIER_CAPACITY_BYTES[0].length;
+    int nDirInSecondTier = TieredBlockStoreTestUtils.TIER_CAPACITY_BYTES[1].length;
+    long smallestCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY_BYTES[0][0];
     long delta = smallestCapacity / 10;
     long blockId = BLOCK_ID;
 
     for (int tierLevel : TieredBlockStoreTestUtils.TIER_LEVEL) {
-      long[] tierCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY[tierLevel];
+      long[] tierCapacity = TieredBlockStoreTestUtils.TIER_CAPACITY_BYTES[tierLevel];
       for (int dirIdx = 0; dirIdx < tierCapacity.length; dirIdx ++) {
-        cache(USER_ID, blockId, tierCapacity[dirIdx] - dirIdx * delta, tierLevel, dirIdx);
+        cache(SESSION_ID, blockId, tierCapacity[dirIdx] - dirIdx * delta, tierLevel, dirIdx);
         blockId ++;
       }
     }
@@ -108,12 +108,12 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     // block in StorageDir with max free space in the first tier needs to be moved to the second
     // tier
     Assert.assertEquals(1, plan.toMove().size());
-    long blockIdMovedInFirstTier = plan.toMove().get(0).getFirst();
+    long blockIdMovedInFirstTier = plan.toMove().get(0).getBlockId();
     Assert.assertEquals(BLOCK_ID + nDirInFirstTier - 1, blockIdMovedInFirstTier);
     // block in StorageDir with max free space in the second tier will be evicted to hold blocks
     // moved from first tier
     Assert.assertEquals(1, plan.toEvict().size());
-    long blockIdEvictedInSecondTier = plan.toEvict().get(0);
+    long blockIdEvictedInSecondTier = plan.toEvict().get(0).getFirst();
     Assert.assertEquals(BLOCK_ID + nDirInFirstTier + nDirInSecondTier - 1,
         blockIdEvictedInSecondTier);
   }
